--- a/index3.html
+++ b/index3.html
@@ -1,2 +1,2 @@
-<h1>Muito bem! Sabem pq as plantinhas não vão no hospital? Pq lá não tem médico de plantão!! Pala né kakakaka</h1>
+<h1>Muito bem! Sabem pq as plantinhas não vão no hospital? Pq lá só tem médico de plantão!! Pala né kakakaka</h1>
 <button><a href="index4.html">Agora cliquem aqui</a></button>
